# FoundationStereo

./: pyproject.toml  readme.md
scripts/: run_demo.py  run_demo_tensorrt.py  vis_dataset.py
src/foundation_stereo/core/: extractor.py
